--- a/src/main/resources/com/bigelmo/cloud/client/main_window.fxml
+++ b/src/main/resources/com/bigelmo/cloud/client/main_window.fxml
@@ -150,7 +150,7 @@
                         <Insets bottom="3.0" top="3.0" />
                      </VBox.margin>
                   </TextField>
-                  <ListView fx:id="cliListView" VBox.vgrow="ALWAYS">
+                  <ListView fx:id="cliListView" onMouseClicked="#cliListView" VBox.vgrow="ALWAYS">
                      <VBox.margin>
                         <Insets top="3.0" />
                      </VBox.margin>
