--- a/src/main/resources/com/bigelmo/cloud/client/main_window.fxml
+++ b/src/main/resources/com/bigelmo/cloud/client/main_window.fxml
@@ -120,20 +120,17 @@
                         <Insets bottom="3.0" top="3.0" />
                      </VBox.margin>
                   </TextField>
-                  <ListView fx:id="srvListView" VBox.vgrow="ALWAYS">
+                  <ListView fx:id="srvListView" onMouseClicked="#srvListView" VBox.vgrow="ALWAYS">
                      <VBox.margin>
                         <Insets top="3.0" />
                      </VBox.margin>
                   </ListView>
                </children>
             </VBox>
-            <VBox prefWidth="200.0" HBox.hgrow="NEVER">
+            <VBox prefWidth="12.0" HBox.hgrow="NEVER">
                <HBox.margin>
                   <Insets left="3.0" right="3.0" />
                </HBox.margin>
-               <children>
-                  <ListView fx:id="logListView" VBox.vgrow="ALWAYS" />
-               </children>
             </VBox>
             <VBox alignment="TOP_CENTER" HBox.hgrow="ALWAYS">
                <HBox.margin>
